--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = logi
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.logi
+PRODUCT_BUNDLE_IDENTIFIER = com.udeep500.logi
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
