--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,10 +39,9 @@ dependencies:
   flutter_bloc: ^8.1.1
   firebase_core: ^1.20.1
 
-  # A dart-native implementation of the Firebase Auth and Firestore SDKs
-  # https://pub.dev/packages/firedart
-  firedart: ^0.9.0+1
-  firebase_database: ^9.1.1
+  #  A Flutter plugin to use the Cloud Firestore API.
+  # https://pub.dev/packages/cloud_firestore
+  cloud_firestore: ^3.4.4
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +59,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
