--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   # https://pub.dev/packages/equatable
   equatable: ^2.0.3
 
+  #  A dart-native implementation of the Firebase Auth and Firestore SDKs
+  # https://pub.dev/packages/firedart
+  firedart: ^0.9.0+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
