--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,22 @@ dependencies:
   # https://pub.dev/packages/firedart
   firedart: ^0.9.0+1
 
+  # Internationalization for your Flutter Apps
+  # https://pub.dev/packages/easy_localization
+  # easy_localization: ^3.0.0
+  easy_localization:
+    git:
+      url: https://github.com/onpointvn/easy_localization.git
+      ref: v3.0.2
+      
+  # An extension to package:bloc which automatically persists and restores bloc and cubit states. Built to work with package:bloc.
+  # https://pub.dev/packages/hydrated_bloc
+  hydrated_bloc: ^8.1.0
+
+  # A Flutter plugin for finding commonly used locations on the filesystem
+  # https://pub.dev/packages/path_provider
+  path_provider: ^2.0.11
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -77,9 +93,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
