--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,6 @@ dependencies:
   # https://pub.dev/packages/cloud_firestore
   cloud_firestore: ^3.4.4
 
-  # Unofficial implementation of Fluent UI for Flutter. It's written based on the official documentation
-  # https://pub.dev/packages/fluent_ui
-  fluent_ui: ^3.12.0
-
   # Being able to compare objects in Dart often involves having to override the == operator as well as hashCode.
   # https://pub.dev/packages/equatable
   equatable: ^2.0.3
@@ -71,6 +67,10 @@ dependencies:
   # https://pub.dev/packages/path_provider
   path_provider: ^2.0.11
 
+  # Track log
+  # https://pub.dev/packages/logger
+  logger: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -81,6 +81,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+  build_runner:
+  flutter_gen_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -95,6 +98,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/translations/
+    - assets/configs/config.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
