--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -27,3 +27,9 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+analyzer:
+  exclude:
+    [build/**, lib/**.freezed.dart, lib/core/**.g.dart, lib/features/**.g.dart]
+  errors:
+    invalid_annotation_target: ignore
