--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
     git:
       url: https://github.com/onpointvn/easy_localization.git
       ref: v3.0.2
-      
+
   # An extension to package:bloc which automatically persists and restores bloc and cubit states. Built to work with package:bloc.
   # https://pub.dev/packages/hydrated_bloc
   hydrated_bloc: ^8.1.0
@@ -70,6 +70,18 @@ dependencies:
   # Track log
   # https://pub.dev/packages/logger
   logger: ^1.1.0
+
+  # Welcome to Freezed, yet another code generator for data-classes/unions/pattern-matching/cloning.
+  # https://pub.dev/packages/freezed
+  freezed: ^2.1.0+1
+
+  # Annotations for freezed.
+  # https://pub.dev/packages/freezed_annotation
+  freezed_annotation: ^2.1.0
+
+  # Defines the annotations used by json_serializable to create code for JSON serialization and deserialization.
+  # https://pub.dev/packages/json_annotation
+  json_annotation: ^4.6.0
 
 dev_dependencies:
   flutter_test:
@@ -84,6 +96,7 @@ dev_dependencies:
 
   build_runner:
   flutter_gen_runner:
+  json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
